search section html code

--- a/index.html
+++ b/index.html
@@ -29,7 +29,16 @@
     <!-- jumbotron ends (top section ends) -->
 
     <!-- search section -->
-
+    <section>
+      <div>
+        <h1>Search City</h1>
+        <input type="text" />
+      </div>
+      <div>
+        <button>Search</button>
+      </div>
+      <div></div>
+    </section>
     <!-- section to display the city searched -->
 
     <!-- 5-day forecast section -->
