--- a/index.html
+++ b/index.html
@@ -23,26 +23,99 @@
   </head>
   <body>
     <!-- jumbotron (top section) -->
-    <header class="jumbotron">
+    <div class="jumbotron container-fluid">
       <h1>Weather Dashboard</h1>
-    </header>
+    </div>
     <!-- jumbotron ends (top section ends) -->
 
     <!-- search section -->
-    <section>
-      <div>
-        <h1>Search City</h1>
-        <input type="text" />
+    <div class="container-fluid">
+      <div class="row">
+        <div class="col-lg-3 bg-light">
+          <h4 class="mt-1">Search for a City:</h4>
+          <!-- text box -->
+          <div class="input mb-3">
+            <input
+              type="text"
+              id="search-city"
+              class="inputValue"
+              placeholder="Enter a City"
+              aria-label="Enter a City"
+            />
+            <input type="submit" value="submit" />
+            <div class="input-group-append">
+              <button class="btn" type="button" id="search-button">
+                <i class="fas fa-search" ::before></i>
+              </button>
+            </div>
+          </div>
+        </div>
+        <form id="history">
+          <input type="text" class="inputValue" />
+        </form>
       </div>
-      <div>
-        <button>Search</button>
+
+      <!-- section to display the city searched -->
+      <div class="col-lg-9">
+        <div id="row-mr-0">
+          <div class="col-lg-11 card m-3" id="today-weather">
+            <div class="display">
+              <h3 id="city-name" class="city-name align middle"></h3>
+              <img src="" alt="" />
+              <p class="Temperature"></p>
+              <p class="Humidity"></p>
+              <p class="Wind-Speed"></p>
+              <p class="UV-index"></p>
+            </div>
+          </div>
+        </div>
       </div>
-      <div></div>
-    </section>
-    <!-- section to display the city searched -->
 
-    <!-- 5-day forecast section -->
+      <!-- 5-day forecast section -->
+      <div class="row" id="fiveday-header">
+        <div class="col-12">
+          <h3>5-Day Forecast</h3>
+        </div>
+      </div>
 
+      <div class="row">
+        <div class="col-md-2 forecast">
+          <p class="mt-3 mb-0 forecast-date"></p>
+          <img src="" alt="" />
+          <p>Temp:</p>
+          <p>Wind:</p>
+          <p>Humidity:</p>
+        </div>
+        <div class="col-md-2 forecast">
+          <p class="mt-3 mb-0 forecast-date"></p>
+          <img src="" alt="" />
+          <p>Temp:</p>
+          <p>Wind:</p>
+          <p>Humidity:</p>
+        </div>
+        <div class="col-md-2 forecast">
+          <p class="mt-3 mb-0 forecast-date"></p>
+          <img src="" alt="" />
+          <p>Temp:</p>
+          <p>Wind:</p>
+          <p>Humidity:</p>
+        </div>
+        <div class="col-md-2 forecast">
+          <p class="mt-3 mb-0 forecast-date"></p>
+          <img src="" alt="" />
+          <p>Temp:</p>
+          <p>Wind:</p>
+          <p>Humidity:</p>
+        </div>
+        <div class="col-md-2 forecast">
+          <p class="mt-3 mb-0 forecast-date"></p>
+          <img src="" alt="" />
+          <p>Temp:</p>
+          <p>Wind:</p>
+          <p>Humidity:</p>
+        </div>
+      </div>
+    </div>
     <script src="./assets/js/script.js"></script>
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.1/moment.min.js"></script>
